--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -13,15 +13,16 @@
   </div>
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
-      <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
+      <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
         class="p-16 export">
-        <button mat-raised-button type="button" class="is-danger">
+        <button (click)="import()" mat-raised-button type="button" class="is-danger">
           <mat-icon>arrow_downward</mat-icon> Import CSV
         </button>
-        <button mat-raised-button type="button" class="is-danger">
+        <a #downloadLink></a>
+        <button (click)="export()" mat-raised-button type="button" class="is-danger">
           <mat-icon>arrow_upward</mat-icon> Export CSV
         </button>
-      </div> -->
+      </div>
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table">
         <h2 class="pl-8">Daftar Produk</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
@@ -40,7 +41,7 @@
             <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected" let-selectFn="selectFn">
               <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
             </ng-template>
-  
+
             <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected" let-onCheckboxChangeFn="onCheckboxChangeFn">
               <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)"></mat-checkbox>
             </ng-template>
@@ -65,6 +66,17 @@
         <ngx-datatable-column name="Perusahaan" prop="brand_name"></ngx-datatable-column>
 
         <ngx-datatable-column [width]="88" name="Kategori" prop="category_name"></ngx-datatable-column>
+        <ngx-datatable-column [width]="88" name="Produk Pilihan SRC" prop="is_promo_src">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span class="row-name">{{row.is_promo_src === 1 ? 'YA' : '-'}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [width]="88" name="Pin Up Product" prop="status_pin_up">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span class="row-name">{{row.status_pin_up === 1 ? 'YA' : '-'}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [width]="88" name="Prioritas Produk" prop="priority_product"></ngx-datatable-column>
         <ngx-datatable-column [width]="68" name="Status" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
             <div class="name-container pl-12">
