Task Sequencing Management - Initial Commit

--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -128,7 +128,7 @@
               let-selectFn="selectFn">
               <mat-checkbox [checked]="allRowsSelected"></mat-checkbox>
             </ng-template>
-  
+
             <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected" let-onCheckboxChangeFn="onCheckboxChangeFn">
               <mat-checkbox [checked]="isSelected"></mat-checkbox>
             </ng-template>
@@ -148,7 +148,7 @@
           </ng-template> -->
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Retail Classification" prop="classification" summary-template="activeCell">
+        <ngx-datatable-column name="Retailer Classification" prop="classification" summary-template="activeCell">
         </ngx-datatable-column>
 
         <ngx-datatable-column name="SRC Classification" prop="src_classification" summary-template="activeCell">
