--- a/src/app/pages/dte/audience/edit/audience-edit.component.html
+++ b/src/app/pages/dte/audience/edit/audience-edit.component.html
@@ -20,15 +20,7 @@
             </mat-form-field>
           </div>
 
-          <div fxLayout="row" style="margin-bottom: 10px;">
-            <mat-radio-group formControlName="audience_type">
-              <mat-radio-button class="radio-button pr-48" *ngFor="let item of listAudienceType" [value]="item.value">
-                {{item.name}}
-              </mat-radio-button>
-            </mat-radio-group>
-          </div>
-
-          <div fxLayout="row" *ngIf="formAudience.get('audience_type').value === 'mission'">
+          <!--<div fxLayout="row" *ngIf="formAudience.get('audience_type').value === 'mission'">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <mat-select formControlName="trade_scheduler_id" placeholder="Nama Pengatur Jadwal Trade Program"
                 #singleSelect>
@@ -44,23 +36,7 @@
                 Nama Pengatur Jadwal Trade Program harus diisi
               </mat-error>
             </mat-form-field>
-          </div>
-
-          <div fxLayout="row" *ngIf="formAudience.get('audience_type').value === 'challenge'">
-            <mat-form-field fxFlex="45" class="is-light form-primary">
-              <mat-select formControlName="trade_creator_id" placeholder="Nama Trade Program">
-                <ngx-mat-select-search [formControl]="filterTradeProgram" [placeholderLabel]="'Cari Trade Program...'"
-                  [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'"></ngx-mat-select-search>
-                <mat-option *ngFor="let item of filteredTradeProgram | async" [value]="item.id">
-                  {{item.name}}
-                </mat-option>
-              </mat-select>
-              <mat-error
-                *ngIf="formAudience.controls['trade_creator_id'].hasError('required') && formAudience.controls['trade_creator_id'].touched">
-                Nama Trade Program harus diisi
-              </mat-error>
-            </mat-form-field>
-          </div>
+          </div>-->
 
           <div fxLayout="row">
             <mat-radio-group formControlName="type" (change)="changeValue()">
@@ -91,6 +67,29 @@
               </mat-error>
               <mat-error *ngIf="formAudience.controls['max'].hasError('min') && formAudience.controls['max'].touched">
                 Audience maksimal tidak boleh kurang dari jumlah minimal audience
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row" style="margin-bottom: 10px;">
+            <mat-radio-group formControlName="audience_type">
+              <mat-radio-button class="radio-button pr-48" *ngFor="let item of listAudienceType" [value]="item.value">
+                {{item.name}}
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
+
+          <div fxLayout="row" *ngIf="formAudience.get('audience_type').value === 'challenge'">
+            <mat-form-field fxFlex="45" class="is-light form-primary">
+              <mat-select formControlName="trade_creator_id" placeholder="Nama Trade Program">
+                <ngx-mat-select-search [formControl]="filterTradeProgram" [placeholderLabel]="'Cari Trade Program...'"
+                  [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'"></ngx-mat-select-search>
+                <mat-option *ngFor="let item of filteredTradeProgram | async" [value]="item.id">
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
+              <mat-error
+                *ngIf="formAudience.controls['trade_creator_id'].hasError('required') && formAudience.controls['trade_creator_id'].touched">
+                Nama Trade Program harus diisi
               </mat-error>
             </mat-form-field>
           </div>
