--- a/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
+++ b/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
@@ -47,10 +47,10 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="32%" class="is-light form-primary">
-                <input matInput [matDatepicker]="tanggal_berakhir" (focus)="tanggal_berakhir.open()" formControlName="date"
+                <input matInput [matDatepicker]="tanggal_berakhir" (focus)="tanggal_berakhir.open()" formControlName="enddate"
                   placeholder="Tanggal Berakhir">
                 <mat-error
-                  *ngIf="formPopupGroup.controls['date'].hasError('required') && formPopupGroup.controls['date'].touched">
+                  *ngIf="formPopupGroup.controls['enddate'].hasError('required') && formPopupGroup.controls['enddate'].touched">
                   Tanggal Terbit harus diisi
                 </mat-error>
                 <mat-datepicker-toggle matSuffix [for]="tanggal_berakhir">
@@ -59,12 +59,12 @@
                 <mat-datepicker #tanggal_berakhir></mat-datepicker>
               </mat-form-field>
               <mat-form-field fxFlex="15%" class="is-light form-primary" id="time1">
-                <input matInput formControlName="time" placeholder="Jam Berakhir" [ngxTimepicker]="fullTime1" [format]="24"
+                <input matInput formControlName="endtime" placeholder="Jam Berakhir" [ngxTimepicker]="fullTime1" [format]="24"
                   readonly>
                 <mat-icon matSuffix>access_time</mat-icon>
                 <ngx-material-timepicker #fullTime1></ngx-material-timepicker>
                 <mat-error
-                  *ngIf="formPopupGroup.controls['time'].hasError('required') && formPopupGroup.controls['time'].touched">
+                  *ngIf="formPopupGroup.controls['endtime'].hasError('required') && formPopupGroup.controls['endtime'].touched">
                   Waktu harus diisi
                 </mat-error>
               </mat-form-field>
