--- a/src/app/pages/dte/mission-builder/create/diaglog-misi/diaglog-misi.component.html
+++ b/src/app/pages/dte/mission-builder/create/diaglog-misi/diaglog-misi.component.html
@@ -4,7 +4,7 @@
   <mat-dialog-content>
 
     <mat-form-field style="width: 100%">
-      <mat-select formControlName="task_template_id" placeholder="Pilih Template Misi" id="task_template_id" #singleSelect>
+      <mat-select formControlName="task_template_id" placeholder="Pilih Template Misi" id="task_template_id" (selectionChange)="selectChangeMisi($event)" #singleSelect>
         <ngx-mat-select-search [formControl]="filterMission" [placeholderLabel]="'Cari Template Misi...'"
           [noEntriesFoundLabel]="'Tidak ada Template Misi yang ditemukan'"></ngx-mat-select-search>
         <mat-option *ngFor="let item of filteredMission | async" [value]="item.id">
@@ -26,13 +26,13 @@
     </mat-form-field>
 
     Push To FF
-    <mat-slide-toggle style="margin-right: 20px" [formControl]="pushFF" name="push-to-ff" (change)="selectChangeFF($event)"></mat-slide-toggle>
+    <mat-slide-toggle style="margin-right: 20px" [formControl]="pushFF" name="push-to-ff" (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
     Verifikasi FF
-    <mat-slide-toggle style="margin-right: 20px" [formControl]="verifikasiFF" name="verifikasi-ff" (change)="selectChange($event)"></mat-slide-toggle>
+    <mat-slide-toggle style="margin-right: 20px" [formControl]="verifikasiFF" name="verifikasi-ff" (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
     Verifikasi Manual
-    <mat-slide-toggle style="margin-right: 20px" [formControl]="verifikasi" name="verifikasi" (change)="selectChange($event)"></mat-slide-toggle>
+    <mat-slide-toggle style="margin-right: 20px" [formControl]="verifikasi" name="verifikasi" (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
     <!--Verifikasi IR
     <mat-slide-toggle [formControl]="verifikasiIR" name="verifikasi-ir" (change)="selectChange($event)"></mat-slide-toggle>-->
