Update: Export XLS label and Spinner

--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -16,11 +16,11 @@
       <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
         class="p-16 export">
         <button (click)="import()" mat-raised-button type="button" class="is-danger">
-          <mat-icon>arrow_downward</mat-icon> Import CSV
+          <mat-icon>arrow_downward</mat-icon> Import XLS
         </button>
         <a #downloadLink></a>
         <button (click)="export()" mat-raised-button type="button" class="is-danger">
-          <mat-icon>arrow_upward</mat-icon> Export CSV
+          <mat-icon>arrow_upward</mat-icon> Export XLS
         </button>
       </div>
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table">
