--- a/src/app/pages/pay-later/pay-later-activation/pay-later-activation-src/pay-later-activation-src.component.html
+++ b/src/app/pages/pay-later/pay-later-activation/pay-later-activation-src/pay-later-activation-src.component.html
@@ -10,8 +10,7 @@
     </div>
   </div>
   <form [formGroup]="formFilter" autoComplete="off">
-    <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px"
-      fxLayoutGap.lt-md="0px">
+    <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
       <mat-form-field fxFlex="12%" class="is-light form-primary">
         <mat-select placeholder="National" formControlName="national">
           <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
@@ -64,6 +63,30 @@
             :
             item.code}}</mat-option>
         </mat-select>
+      </mat-form-field>
+    </div>
+    <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
+      style="margin-bottom: 25px;">
+      <mat-form-field fxFlex="20" class="is-light form-primary">
+        <mat-select placeholder="Status" [formControl]="status">
+          <mat-option *ngFor="let item of listStatus" [value]="item.value">{{item.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field fxFlex="20%" class="is-light form-primary">
+        <input matInput [matDatepicker]="dari" (focus)="dari.open()" [formControl]="start_date"
+          placeholder="Tanggal Mulai">
+        <mat-datepicker-toggle matSuffix [for]="dari">
+          <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+        </mat-datepicker-toggle>
+        <mat-datepicker #dari></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field fxFlex="20%" class="is-light form-primary">
+        <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [formControl]="end_date"
+          placeholder="Tanggal Berakhir">
+        <mat-datepicker-toggle matSuffix [for]="sampai">
+          <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+        </mat-datepicker-toggle>
+        <mat-datepicker #sampai></mat-datepicker>
       </mat-form-field>
     </div>
   </form>
