button export dte automation

--- a/src/app/pages/dte/automation/index/audience-trade-program-index.component.html
+++ b/src/app/pages/dte/automation/index/audience-trade-program-index.component.html
@@ -74,6 +74,10 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px">
               <!-- attribut button edit harus ada permission *ngIf="permission?.ubah" -->
+              <button type="button" mat-icon-button color="" [disabled]="row.status_audience !== 'approved'"
+                matTooltip="Eksport" (click)="export()">
+                <mat-icon class="orange-500-fg">save_alt</mat-icon>
+              </button>
               <button mat-icon-button color="" (click)="directEdit(row)" *ngIf="row.status !== 'berjalan'">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
