--- a/src/app/pages/dte/audience/edit/audience-edit.component.html
+++ b/src/app/pages/dte/audience/edit/audience-edit.component.html
@@ -152,62 +152,6 @@
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <!--[R]-->
-          <mat-form-field fxFlex="31%" class="is-light form-primary">
-            <mat-select
-              placeholder="Retail Classification"
-              formControlName="retail_classification"
-              multiple
-            >
-              <mat-option
-                *ngFor="let item of filteringGeotree(list['territory'])"
-                [value]="item.id"
-                >{{
-                  item.name === "all"
-                    ? "Semua
-                Territori"
-                    : item.code
-                }}</mat-option
-              >
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="31%" class="is-light form-primary">
-            <mat-select
-              placeholder="SRC Classification"
-              formControlName="src_classification"
-              multiple
-            >
-              <mat-option
-                *ngFor="let item of filteringGeotree(list['territory'])"
-                [value]="item.id"
-                >{{
-                  item.name === "all"
-                    ? "Semua
-                Territori"
-                    : item.code
-                }}</mat-option
-              >
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="31%" class="is-light form-primary">
-            <mat-select
-              placeholder="SRC Type"
-              formControlName="src_type"
-              multiple
-            >
-              <mat-option
-                *ngFor="let item of filteringGeotree(list['territory'])"
-                [value]="item.id"
-                >{{
-                  item.name === "all"
-                    ? "Semua
-                Territori"
-                    : item.code
-                }}</mat-option
-              >
-            </mat-select>
-          </mat-form-field>
-          <!--[R]-->
           <!-- <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select placeholder="National" formControlName="national">
               <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
@@ -266,6 +210,52 @@
                 item.name}}</mat-option>
             </mat-select>
           </mat-form-field> -->
+        </div>
+      </form>
+      <form [formGroup]="formFilterRetailer" autoComplete="off">
+        <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16"
+        fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+          <!--[R]-->
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select
+              placeholder="Retail Classification"
+              formControlName="retail_classification"
+            >
+              <mat-option
+                *ngFor="let item of retailClassification"
+                [value]="item.value"
+              >
+              {{item.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select
+              placeholder="SRC Classification"
+              formControlName="src_classification"
+            >
+              <mat-option
+                *ngFor="let item of srcClassification"
+                [value]="item.value"
+              >
+              {{item.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select
+              placeholder="SRC Type"
+              formControlName="src_type"
+            >
+              <mat-option
+                *ngFor="let item of srcType"
+                [value]="item.value"
+              >
+              {{item.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <!--[R]-->
         </div>
       </form>
     </div>
