--- a/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
@@ -6,7 +6,7 @@
     <mat-form-field style="width: 100%">
       <mat-select formControlName="task_template_id" placeholder="Pilih Template Misi" id="task_template_id" (selectionChange)="selectChangeMisi($event)" #singleSelect>
         <ngx-mat-select-search [formControl]="filterMission" [placeholderLabel]="'Cari Template Misi...'"
-          [noEntriesFoundLabel]="'Tidak ada Template Misi yang ditemukan'"></ngx-mat-select-search>
+          [noEntriesFoundLabel]="'Tidak ada Template Misi yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
         <mat-option *ngFor="let item of filteredMission | async" [value]="item.id">
           {{item.name}}
         </mat-option>
