--- a/src/app/pages/dte/task-verification/index-tsm/task-verification-index-tsm.component.html
+++ b/src/app/pages/dte/task-verification/index-tsm/task-verification-index-tsm.component.html
@@ -55,7 +55,7 @@
 </form>
 <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
   [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-  [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
+  [rowHeight]="48" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
   [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
   (sort)="onSort($event)">
 
