--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -26,6 +26,13 @@
                 </div>
                 <br>
                 <mat-form-field fxFlex="100" class="is-light form-primary">
+                  <input matInput type="text" placeholder="Kode Family" formControlName="code">
+                  <mat-error
+                    *ngIf="formProductGroup.controls['code'].hasError('required') && formProductGroup.controls['code'].touched">
+                    Kode Family harus diisi
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="100" class="is-light form-primary">
                   <input matInput type="text" placeholder="Nama Produk" formControlName="name">
                   <mat-error
                     *ngIf="formProductGroup.controls['name'].hasError('required') && formProductGroup.controls['name'].touched">
