--- a/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
@@ -30,7 +30,7 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <div fxLayout="row">
+          <!--<div fxLayout="row">
             <mat-form-field fxFlex="100" fxFlex.gt-sm="50" class="is-light form-primary">
               <mat-chip-list #chipList aria-label="Keyword Selection">
                 <mat-chip *ngFor="let product of products" [selectable]="productSelectable"
@@ -58,7 +58,7 @@
                   Digital Care untuk pertanyaan ini.</span>
               </mat-option>
             </mat-autocomplete>
-          </div>
+          </div>-->
           <div fxLayout="column" class="mb-8">
             <label class="field-label" *ngIf="createForm.controls['alamat'].value">Alamat</label>
             <div fxLayout="row" >
